install sshpass in travis.yml

--- a/.travis.yml
+++ b/.travis.yml
@@ -24,8 +24,7 @@ before_script:
   - ln -s ../../mapbender
   - php app/console doctrine:database:create
   - php app/console doctrine:schema:create
-  - php app/console doctrine:fixtures:load --fixtures=./mapbender/src/Mapbender/CoreBundle/DataFixtures/ORM/Epsg/
-  --append
+  - php app/console doctrine:fixtures:load --fixtures=./mapbender/src/Mapbender/CoreBundle/DataFixtures/ORM/Epsg/ --append
   - php app/console fom:user:resetroot --username root --password root --email root@root.de --silent
   - phantomjs --webdriver=9876 &
   - export PJSPORT=$(echo $!)
@@ -42,5 +41,6 @@ after_script:
   - php ocular.phar code-coverage:upload --repository g/mapbender/mapbender --format=php-clover ../testresults/clover.xml --revision $MYREV
   - kill -9 $PJSPORT
   - echo -e :"Host mapbender3.org\n\tStrictHostKeyChecking no" >> ~/.ssh/config
+  - sudo aptitude install sshpass
   - sshpass -p "$travispassword" ssh travis@mapbender3.org mkdir public/screenshots/$TRAVIS_JOB_NUMBER/
   - sshpass -p "$travispassword" scp ../testresults/screenshots/* travis@mapbender3.org:public/screenshots/$TRAVIS_JOB_NUMBER/
