hide login application

--- a/src/Mapbender/CoreBundle/Resources/config/mapbender.yml
+++ b/src/Mapbender/CoreBundle/Resources/config/mapbender.yml
@@ -11,5 +11,5 @@ parameters:
         mb3-login:
             title: Mapbender Login
             template:  Mapbender\ManagerBundle\Template\LoginTemplate
-            excludeFromList: false
+            excludeFromList: true
             published: true
