--- a/.travis.yml
+++ b/.travis.yml
@@ -19,7 +19,7 @@ before_script:
   - git submodule update --init --recursive
   - cd application
   - cp app/config/parameters.yml.dist app/config/parameters.yml
-  - composer update --dev
+  - composer update
   - rm -rf mapbender
   - ln -s ../../mapbender
   - php app/console doctrine:database:create
