--- a/.travis.yml
+++ b/.travis.yml
@@ -4,6 +4,10 @@ env:
 
 language: php
 
+cache:
+    directories:
+        - $HOME/.composer
+
 php:
   - 5.6
   - 5.5
@@ -29,7 +33,7 @@ before_script:
   - php app/console fom:user:resetroot --username root --password root --email root@root.de --silent
   - phantomjs --webdriver=9876 &
   - export PJSPORT=$(echo $!)
-  - sudo pip install selenium
+  - pip install selenium
 
 script: phpunit -c app/ --coverage-clover ../testresults/clover.xml
 
